--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
             "org.assertj:assertj-core:${assertJVersion}",
             "org.projectlombok:lombok:${lombokVersion}",
             "ch.qos.logback:logback-classic:${logbackVersion}"
+    testImplementation 'junit:junit:4.13.1'
 }
 
 test {
@@ -50,3 +51,11 @@ serenity {
 }
 
 test.finalizedBy(aggregate)
+
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
