Inital Checkin Nov 27th

--- a/serenity.properties
+++ b/serenity.properties
@@ -2,4 +2,17 @@
 # These properties are used by the Gradle build
 # serenity.project.name = Serenity Test Suite Using JUnit
 # serenity.test.root=starter
-
+//webdriver.driver=firefox
+//chrome.switches=--headless
+//chrome.switches--==window-size=1920,1080;--headless
+chrome.switces=--window-size=1920,1080;
+//serenity.browser.width=1500
+//serenity.browser.height=1500
+//gecko.firefox.options = {"args": [*-headless*]}
+serenity.store.html.source=true;
+//webdriver.timeouts.implicitlywait=36000
+webdriver.timeouts.implicitlywait=10000
+webdriver.wait.for.timeout=20000
+//webdriver.timeouts.explicitlywait=15000
+serenity.project.name=TomCTest
+serenity.compress.filenames=false
