--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -4,7 +4,7 @@ serenity {
   logging = VERBOSE
 }
 
-headless.mode = true
+headless.mode = false
 webdriver {
   driver = chrome
   capabilities {
@@ -13,7 +13,7 @@ webdriver {
     "goog:chromeOptions" {
       args = ["remote-allow-origins=*","test-type", "no-sandbox", "ignore-certificate-errors", "--window-size=1000,800",
         "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
-    }
-  }
-}
+    } //options
+  } //capabilities
+} //webdriver
 
